--- a/Website.html
+++ b/Website.html
@@ -4,7 +4,7 @@
 	<link href='https://fonts.googleapis.com/css?family=Raleway:200' rel='stylesheet' type='text/css'>
 	<style>
 		body {
-			text-align: center;
+			text-align: left;
 			background-image: url('http://i.imgur.com/uoaGHA8.jpg');
 			background-repeat: no-repeat;
 			-webkit-background-size:cover;
